[package]
name = "shurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
clap = { version = "4.4.11", features = ["derive"] }
git2 = "0.18.1"
url = "2.5.0"
owo-colors = "3.5.0"
shellexpand = "3.1.0"
rand = "0.8.5"
